--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 * {
   box-sizing: border-box;
-  padding: 8px;
+  /* padding: 8px; */
   margin: 0;
   font-family: "GmarketSansMedium", sans-serif;
 }
