💄 Design : tailwind 전역 폰트 크기 수정
Change-Id: I3d6fef7629e9bed91b6133e541b0c2e08d085518

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,10 +34,13 @@
 
 @layer base {
   h1 {
-    @apply text-2xl;
+    @apply text-[18px];
   }
   h2 {
-    @apply text-xl;
+    @apply text-[16px];
+  }
+  p {
+    @apply text-[14px];
   }
 }
 
