--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,13 +34,24 @@
 
 @layer base {
   h1 {
-    @apply text-[18px];
+    @apply text-[1.5rem];
+    font-family: "GmarketSansBold";
   }
   h2 {
-    @apply text-[16px];
+    @apply text-[1.25rem];
+    font-family: "GmarketSansBold";
   }
-  p {
-    @apply text-[14px];
+  h3 {
+    @apply text-[1.125rem];
+    font-family: "GmarketSansMedium";
+  }
+  h4 {
+    @apply text-[1rem];
+    font-family: "GmarketSansMedium";
+  }
+  h5 {
+    @apply text-[0.875rem];
+    font-family: "GmarketSansLight";
   }
 }
 
@@ -52,6 +63,7 @@
   --chatMyColor: #f4f4f4;
   --fontColor: #2b2b2b;
 
+  font-size: 16px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
