--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+@layer utilities {
+  .character-small {
+  @apply 
+    w-[60px] h-[60px] opacity-100 justify-center items-center flex
+  }
+}
