--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,4 +77,21 @@
   @apply 
     w-[60px] h-[60px] opacity-100 justify-center items-center flex
   }
+
+  /* 방명록 등록 */
+  .photo-frame {
+    @apply
+      relative h-[90vw] max-h-[90vh] my-5 rounded-lg flex items-center justify-center overflow-hidden;
+      background-image: radial-gradient(50.13% 50% at 50.13% 50%, #FFF 51.98%, #EEECEC 100%);
+  }
+
+  .photo-img-frame{
+    @apply
+    absolute inset-0 w-full h-full object-cover
+  }
+
+  .input-style{
+    @apply
+    bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2
+  }
 }
