--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
   box-sizing: border-box;
   /* padding: 8px; */
@@ -68,8 +69,8 @@
 
 :root {
   --mainColor: #e4efff;
-  --subColor: #97c1ff;
-  --subColor2: #abcef2;
+  /* --subColor: #97c1ff; */
+  --subColor: #abcef2;
   --chatMyColor: #f4f4f4;
   --fontColor: #2b2b2b;
 
@@ -88,6 +89,14 @@
     w-[60px] h-[60px] opacity-100 justify-center items-center flex
   }
 
+  /* 방명록 가이드 */
+  .trace-guide {
+  @apply
+    rounded-[14.5px] h-[120vw] items-center;
+    background-image: radial-gradient(96.37% 79.72% at 50% 50.12%, #FFF 38.96%, #E1F0FF 100%);
+    /* shadow-[0px 3.625px 9.0625px 0px rgba(97, 157, 218, 0.40)]; */
+  }
+
   /* 방명록 등록 */
   .photo-frame {
     @apply
@@ -97,12 +106,12 @@
 
   .photo-img-frame{
     @apply
-    absolute inset-0 w-full h-full object-cover
+    absolute inset-0 w-full h-full object-cover;
   }
 
   .input-style{
     @apply
-    bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2
+    bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2;
   }
 
 }
