--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,12 +89,25 @@
     w-[60px] h-[60px] opacity-100 justify-center items-center flex
   }
 
-  /* 방명록 가이드 */
+  /* 공간 캐러셀 */
   .trace-guide {
-  @apply
-    rounded-[14.5px] h-[120vw] items-center;
-    background-image: radial-gradient(96.37% 79.72% at 50% 50.12%, #FFF 38.96%, #E1F0FF 100%);
+    @apply
+      rounded-[14.5px] h-[120vw] items-center;
+      background-image: radial-gradient(96.37% 79.72% at 50% 50.12%, #FFF 38.96%, #E1F0FF 100%);
     /* shadow-[0px 3.625px 9.0625px 0px rgba(97, 157, 218, 0.40)]; */
+  }
+
+  /* 랜드마크 디테일*/
+  .landmark-title{
+    @apply
+    w-[70%] bg-white absolute absolute left-1/2 -translate-x-1/2
+    border-2 rounded-[16px] border flex justify-center;
+  }
+
+  .landmark-card {
+    @apply
+    text-center h-[100vw] flex items-center justify-center ;
+    background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
   }
 
   /* 방명록 등록 */
