:lipstick: Design: 방명록 등록 css
Change-Id: I7975d82ce49f65c9230a06f9024438d3d3689ffa

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,8 +100,8 @@
   /* 랜드마크 디테일*/
   .landmark-title{
     @apply
-    w-[70%] bg-white absolute absolute left-1/2 -translate-x-1/2
-    border-2 rounded-[16px] border flex justify-center;
+    w-[70%] bg-white  absolute left-1/2 -translate-x-1/2
+    border-2 rounded-[16px]  flex justify-center;
   }
 
   .landmark-card {
@@ -126,5 +126,20 @@
     @apply
     bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2;
   }
+
+  /* 방명록 상세 페이지 */
+
+  .trace-title{
+    @apply
+    w-[80%] bg-white  absolute left-1/2 -translate-x-1/2
+    border-2 rounded-[16px]  flex justify-center text-center;
+  }
+
+  .trace-content{
+    @apply
+    text-center justify-center relative  w-full h-[100vw]  flex items-center ;
+    background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
+  }
+
 
 }
