:lipstick: Design : 랜드마크 방명록 디테일 css
Change-Id: I85338badbedf5cd5265af96e801eface866d1fc5

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -99,13 +99,13 @@
   /* 랜드마크 디테일*/
   .landmark-title{
     @apply
-    w-[70%] bg-white absolute absolute left-1/2 -translate-x-1/2
-    border-2 rounded-[16px] border flex justify-center;
+    w-[80%] py-4 bg-white absolute left-1/2 -translate-x-1/2 top-[25.5%]
+    border-4 border-[#ABCEF2] rounded-[16px] border flex justify-center;
   }
 
   .landmark-card {
     @apply
-    text-center h-[100vw] flex items-center justify-center ;
+    ownglyph-text text-xl text-center h-[70vh] flex items-center justify-center ;
     background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
   }
 
