:sparkles: Feat: 랜드마크 유무에 따른 비동기 처리
Change-Id: I1a73e7b61a2a64264755e47b830635bbd3251f4e

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -139,5 +139,15 @@
     background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
   }
 
-  
+  .landmark-yes{
+    @apply
+    h-screen flex justify-center items-center;
+    background-image: radial-gradient(64.84% 50% at 50% 50%, #FFF 56.67%, #CFE2FF 100%);
+  }
+
+  .landmark-no{
+    @apply
+    h-screen flex justify-center items-center;
+    background-image: radial-gradient(64.84% 50% at 50% 50%, #FFF 56.67%, #D6DFEC 100%);
+  } 
 }
