--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
   box-sizing: border-box;
   /* padding: 8px; */
   margin: 0;
   font-family: "GmarketSansMedium", sans-serif;
 }
-
 
 @font-face {
   font-family: "GmarketSansBold";
@@ -40,7 +38,7 @@
 }
 
 .ownglyph-text {
-  font-family: 'ownglyph';
+  font-family: "ownglyph";
 }
 
 @layer base {
@@ -66,7 +64,6 @@
   }
 }
 
-
 :root {
   --mainColor: #e4efff;
   /* --subColor: #97c1ff; */
@@ -82,70 +79,79 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
 @layer utilities {
   .character-small {
-  @apply 
-    w-[60px] h-[60px] opacity-100 justify-center items-center flex
+    @apply w-[60px] h-[60px] opacity-100 justify-center items-center flex;
   }
 
   /* 공간 캐러셀 */
   .trace-guide {
-    @apply
-      rounded-[14.5px] h-[120vw] py-10;
-      background-image: radial-gradient(96.37% 79.72% at 50% 50.12%, #FFF 38.96%, #E1F0FF 100%);
+    @apply rounded-[14.5px] h-[120vw] py-10;
+    background-image: radial-gradient(
+      96.37% 79.72% at 50% 50.12%,
+      #fff 38.96%,
+      #e1f0ff 100%
+    );
   }
 
   /* 랜드마크 디테일*/
-  .landmark-title{
-    @apply
-    w-[80%] py-4 bg-white absolute left-1/2 -translate-x-1/2 top-[25.5%]
+  .landmark-title {
+    @apply w-[80%] py-4 bg-white absolute left-1/2 -translate-x-1/2 top-[25.5%]
     border-4 border-[#ABCEF2] rounded-[16px] border flex justify-center;
   }
   .landmark-card {
-    @apply
-    ownglyph-text text-xl text-center h-[70vh] flex items-center justify-center ;
-    background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
+    @apply ownglyph-text text-xl text-center h-[70vh] flex items-center justify-center;
+    background-image: radial-gradient(
+      50% 48.18% at 50% 50%,
+      #fff 69.41%,
+      #e4efff 100%
+    );
   }
 
   /* 방명록 등록 */
   .photo-frame {
-    @apply
-      relative h-[90vw] max-h-[90vh] my-5 rounded-lg flex items-center justify-center overflow-hidden;
-      background-image: radial-gradient(50.13% 50% at 50.13% 50%, #FFF 51.98%, #F3F4F6 100%);
+    @apply relative h-[90vw] max-h-[90vh] my-5 rounded-lg flex items-center justify-center overflow-hidden;
+    background-image: radial-gradient(
+      50.13% 50% at 50.13% 50%,
+      #fff 51.98%,
+      #f3f4f6 100%
+    );
   }
 
-  .photo-img-frame{
-    @apply
-    absolute inset-0 w-full h-full object-cover;
+  .photo-img-frame {
+    @apply absolute inset-0 w-full h-full object-cover;
   }
 
-  .input-style{
-    @apply
-    bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2;
+  .input-style {
+    @apply bg-gray-100 w-[100%] px-5 py-3 rounded-[10px] mb-10 mt-2;
   }
 
   /* 방명록 상세 페이지 */
-  .trace-image{
-  @apply
-  h-[40vh] w-full bg-cover bg-center relative object-cover
+  .trace-image {
+    @apply h-[40vh] w-full bg-cover bg-center relative object-cover;
   }
 
-  .trace-title{
-    @apply
-    w-[80%] py-4 bg-white absolute left-1/2 -translate-x-1/2 top-[35%]
+  .trace-title {
+    @apply w-[80%] py-4 bg-white absolute left-1/2 -translate-x-1/2 top-[35%]
     border-4 border-[#ABCEF2] rounded-[16px]  flex justify-center;
   }
 
-  .trace-content{
-    @apply
-    ownglyph-text text-xl text-center h-[60vh] flex items-center justify-center ;
-    background-image: radial-gradient(50% 48.18% at 50% 50%, #FFF 69.41%, #E4EFFF 100%);
+  .trace-content {
+    @apply ownglyph-text text-xl text-center h-[60vh] flex items-center justify-center;
+    background-image: radial-gradient(
+      50% 48.18% at 50% 50%,
+      #fff 69.41%,
+      #e4efff 100%
+    );
   }
 
-  .trace-comment{
-    @apply
-    ownglyph-text text-xl text-center h-[60vh] flex items-center justify-center ;
-    background-image:  radial-gradient(50% 48.18% at 50% 50%, #E4EFFF 52.5%, #E4EFFF 61.35%, #FFF 94.17%);
+  .trace-comment {
+    @apply ownglyph-text text-xl text-center h-[60vh] flex-col justify-center items-center;
+    background-image: radial-gradient(
+      50% 48.18% at 50% 50%,
+      #e4efff 52.5%,
+      #e4efff 61.35%,
+      #fff 94.17%
+    );
   }
 }
