:bug: Fix : 오타 수정

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,7 +100,7 @@
     border-4 border-[#ABCEF2] rounded-[16px] border flex justify-center;
   }
   .landmark-card {
-    @apply ownglyph-text text-xl text-center h-[70vh] flex items-center justify-center
+    @apply ownglyph-text text-xl text-center h-[70vh] flex items-center justify-center;
     background-image: radial-gradient(
       50% 48.18% at 50% 50%,
       #fff 69.41%,
