:lipstick: Design : 내비바 디자인 수정
Change-Id: Ie53b25872e07bb6da4471da08c2c562d1930cc8c

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,9 +92,22 @@
   /* 공간 캐러셀 */
   .trace-guide {
     @apply
-      rounded-[14.5px] h-[120vw] py-10;
+      rounded-[16px] pb-10;
       background-image: radial-gradient(96.37% 79.72% at 50% 50.12%, #FFF 38.96%, #E1F0FF 100%);
   }
+
+  .carousel{
+    @apply list-none;
+  }
+
+  /* .slick-active {
+    background-image: url('/icons/active-btn.svg');
+  } */
+  .carousel li button::before{
+    background-image: url('/icons/active-btn.svg');
+  }
+  
+
 
   /* 랜드마크 디테일*/
   .landmark-title{
@@ -142,5 +155,7 @@
   .nav-shadow {
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.10);
   }
+
+
   
 }
