:lipstick: Design: 방명록 업로드 페이지 디자인 수정
Change-Id: Iea4b2e698230e582150b196ae3cfe3fe6035693f

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,6 +58,10 @@
     @apply text-[1rem];
     font-family: "GmarketSansMedium";
   }
+  h4 {
+    @apply text-[1rem];
+    font-family: "GmarketSansMedium";
+  }
   h5 {
     @apply text-[0.875rem];
     font-family: "GmarketSansLight";
