:lipstick: Design: 캐러셀 디자인 수정
Change-Id: I4267d921295358db3dd70017d8a06abd7f4e577d

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -90,7 +90,7 @@
 
   /* 공간 캐러셀 */
   .trace-guide {
-    @apply rounded-[16px] pb-10;
+    @apply rounded-[16px] w-[100px] pb-10;
     background-image: radial-gradient(
       96.37% 79.72% at 50% 50.12%,
       #fff 38.96%,
