:lipstick: Design: 랜드마크 디테일 디자인 수정
Change-Id: I70cdcdbdd6d3c27ec53327cb0573ecb7aa04b83f

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,7 +116,7 @@
   }
 
   .landmark-card {
-    @apply ownglyph-text text-xl text-center h-[65vh] flex items-center justify-center;
+    @apply ownglyph-text text-xl text-center h-[65vh] flex items-center justify-center relative;
     background-image: radial-gradient(
       50% 48.18% at 50% 50%,
       #fff 69.41%,
