--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,8 +69,16 @@
 }
 
 :root {
+  background-color: #d7ecff;
+  height: 100vh; 
+  left: 50%;
+  max-width: 443px;
+  position: absolute;
+  transform: translate(-50%);
+  width: 100vw;
+  z-index: -9999;
+
   --mainColor: #e4efff;
-  /* --subColor: #97c1ff; */
   --subColor: #abcef2;
   --chatMyColor: #f4f4f4;
   --fontColor: #2b2b2b;
