--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,7 +98,7 @@
 
   /* 공간 캐러셀 */
   .trace-guide {
-    @apply rounded-[16px] w-[100px] pb-10;
+    @apply rounded-[16px] w-[100px] pb-10 mb-5;
     background-image: radial-gradient(
       96.37% 79.72% at 50% 50.12%,
       #fff 38.96%,
@@ -110,12 +110,6 @@
     @apply list-none;
   }
 
-  /* .slick-active {
-    background-image: url('/icons/active-btn.svg');
-  } */
-  .carousel li button::before {
-    background-image: url("/icons/active-btn.svg");
-  }
 
   /* 랜드마크 디테일*/
   .landmark-title {
