--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,7 +98,7 @@
 
   /* 공간 캐러셀 */
   .trace-guide {
-    @apply rounded-[16px] w-[100px] pb-10 mb-5;
+    @apply rounded-[20px]  mb-5 py-10;
     background-image: radial-gradient(
       96.37% 79.72% at 50% 50.12%,
       #fff 38.96%,
