--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,7 +128,9 @@
 
   /* 방명록 등록 */
   .photo-frame {
-    @apply relative h-[90vw] max-h-[90vh] my-5 rounded-lg flex items-center justify-center overflow-hidden;
+    @apply 
+    /* relative h-[50vh] max-h-[] my-5 rounded-lg flex items-center justify-center overflow-hidden; */
+    relative h-[90vw] max-h-[90vh] my-5 rounded-lg flex items-center justify-center overflow-hidden;
     background-image: radial-gradient(
       50.13% 50% at 50.13% 50%,
       #fff 51.98%,
