:lipstick: Design : 공간 페이지 캐러셀 수정
Change-Id: Idc2f6ab574d4e365671ab2c6c0ecee6f4993e1a4

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,16 +98,18 @@
 
   /* 공간 캐러셀 */
   .trace-guide {
-    @apply rounded-[20px]  mb-5 py-10;
+    @apply rounded-[20px]  mb-5 py-10; 
     background-image: radial-gradient(
       96.37% 79.72% at 50% 50.12%,
       #fff 38.96%,
       #e1f0ff 100%
     );
+    /* box-shadow: 0px 3px 20px 0px rgba(97, 157, 218, 0.77); */
+
   }
 
   .carousel {
-    @apply list-none;
+    @apply list-none;    
   }
 
 
