:lipstick: Design : 쪽지 관련 css 수정
Change-Id: Ie67fbe4daddc9248ac33e2a093aa422834c1a09c

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -210,9 +210,8 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #E4EFFF; /* 스크롤바 색상 */
-  border-radius: 6px; /* 스크롤바 모서리 둥글게 */
-  /* height: 3px */
+  /* background-color: #E4EFFF;  */
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-track {
