💄 Design: h6 폰트 추가
Change-Id: I8deae9c2575ab45179a58ff15979114385fcf707

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,7 +66,7 @@
     @apply text-[0.875rem];
     font-family: "GmarketSansLight";
   }
-  p {
+  h6 {
     @apply text-[0.75rem];
     font-family: "GmarketSansLight";
   }
